Add feature descriptions

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,6 +5,7 @@
   <h1 class="text-3xl text-center font-semibold text-zinc-700 tracking-tighter leading-none capitalize">Create new account</h1>
   <form action="/register" method="post">
     <input class="border-2 block mt-2 w-full px-3 py-2 rounded-md" type="text" name="username" placeholder="username">
+    <input class="border-2 block mt-2 w-full px-3 py-2 rounded-md" type="text" name="fullname" placeholder="Full Name">
     <input class="border-2 block mt-2 w-full px-3 py-2 rounded-md" type="email" name="email" placeholder="email">
     <input class="border-2 block mt-2 w-full px-3 py-2 rounded-md" type="number" name="contact" placeholder="contact">
     <input class="border-2 block mt-2 w-full px-3 py-2 rounded-md" type="password" name="password" placeholder="password">
