--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,8 +16,8 @@
     <div class="w-full px-10 py-3 flex text-white justify-between bg-zinc-800">
       <h3>Pinterest</h3>
       <div class="flex gap-10 items-center">
-        <a href="/">Profile</a>
-        <a href="#">Feed</a>
+        <a href="/profile">Profile</a>
+        <a href="/feed">Feed</a>
         <a href="/logout" class="px-3 oy-2 bg-red-700 text-white rounded-lg">Logout</a>
       </div>
     </div>
