--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -13,8 +13,8 @@
             <img class="w-full h-full object-cover" src="/images/uploads/<%= user.profileImage %>" alt="">
         </div>
     </div>
-    <h1 class="text-3xl text-white font-semibold mt-5">Aditya Gupta</h1>
-    <h3 class="text-md">@username</h3>
+    <h1 class="text-3xl text-white font-semibold mt-5"><%= user.username %></h1>
+    <h3 class="text-md">@<%= user.username %></h3>
     <a href="/edit" class="px-7 py-2 bg-zinc-700 mt-5 rounded-full text-xs font-semibold"
     >Edit</a>
     <a href="/add" class="px-8 py-2 rounded-lg bg-red-700 text-xs font-semibold mt-8">Add New Post</a>
@@ -22,9 +22,9 @@
   <div class="cards flex px-10 mt-10 flex-wrap gap-10">
     <div class="card">
       <div class="w-52 h-40 bg-zinc-200 rounded-lg overflow-hidden">
-        <img class="w-full h-full object-cover" src="/images/uploads/<%= user.posts[0].postimage %>"  alt="thi" >
+        <img class="w-full h-full object-cover" src="/images/uploads/<%= user?.posts[0]?.postimage %>"  alt="thi" >
       </div>
-      <h3 class="text-xl font-semibold mt-3">Your Uploaded Pins</h3>
+      <a href="/show/posts" class="inline-block text-xl font-semibold mt-3">Your Uploaded Pins</a>
       <h5 class="text-sm font-medium"><%= user.posts.length %></h5>
     </div>
     </div>
